<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readentry"
        style="@style/Header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readentry_dayread"
        style="@style/Label" />

    <EditText
        android:id="@+id/readentry_dayread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readentry_title"
        style="@style/Label" />

    <com.robinfinch.journal.app.ui.NamedObjectView
        android:id="@+id/readentry_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readentry_part"
        style="@style/Label" />

    <EditText
        android:id="@+id/readentry_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/entity_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entity_delete" />

</LinearLayout>
