<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelentry"
        style="@style/Header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelentry_dayoftravel"
        style="@style/Label" />

    <EditText
        android:id="@+id/travelentry_dayoftravel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelentry_direction"
        style="@style/Label" />

    <Spinner
        android:id="@+id/travelentry_away"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelentry_place"
        style="@style/Label" />

    <AutoCompleteTextView
        android:id="@+id/travelentry_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        style="?android:editTextStyle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/entity_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entity_delete" />

</LinearLayout>
