<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application"
        style="@style/Header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_recruiter"
        style="@style/Label" />

    <com.robinfinch.journal.app.ui.NamedObjectView
        android:id="@+id/application_recruiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_client"
        style="@style/Label" />

    <com.robinfinch.journal.app.ui.NamedObjectView
        android:id="@+id/application_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_start"
        style="@style/Label" />

    <EditText
        android:id="@+id/application_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_rate"
        style="@style/Label" />

    <EditText
        android:id="@+id/application_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />

    <TextView
        android:id="@+id/application_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Label"/>

</LinearLayout>
